<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="wrap_content"
	android:background="@color/white" android:orientation="vertical">
	
    <LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingBottom="5dp"
		android:paddingLeft="20dp" android:paddingRight="20dp"
		android:paddingTop="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="名称"
			android:textColor="@color/main_text_dark" android:textSize="@dimen/text_size_15"/>
		<EditText 
		    android:id="@+id/activity_name"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="24dp" 
			android:layout_weight="0.54" 
			android:hint="请输入活动名称"
			android:background="@drawable/bg_search"
			android:textColor="@color/text_home_color"
			android:textColorHint="@color/main_text_dark"
			android:textSize="@dimen/text_size_13"/>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingBottom="5dp"
		android:paddingLeft="20dp" android:paddingRight="20dp"
		android:paddingTop="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/project"
			android:textColor="@color/main_text_dark" android:textSize="@dimen/text_size_15"/>
		<TextView android:id="@+id/project_text"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="24dp" android:text="运动项目"
			android:background="@drawable/subscribe_item_bg"
			android:padding="5dp"
			android:textColor="@color/text_home_color" android:textSize="@dimen/text_size_15"/>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingBottom="5dp"
		android:paddingLeft="20dp" android:paddingRight="20dp"
		android:paddingTop="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/time"
			android:textColor="@color/main_text_dark" android:textSize="@dimen/text_size_15"/>
		<TextView android:id="@+id/time_text" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="24dp"
			android:text="活动时间" android:textColor="@color/text_home_color"
			android:background="@drawable/subscribe_item_bg"
			android:padding="5dp"
			android:textSize="@dimen/text_size_15"/>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingBottom="5dp"
		android:paddingLeft="20dp" android:paddingRight="20dp"
		android:paddingTop="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/place"
			android:textColor="@color/main_text_dark" android:textSize="@dimen/text_size_15"/>
		<TextView android:id="@+id/place_text" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="24dp"
			android:text="场馆名称" android:textColor="@color/text_home_color"
			android:background="@drawable/subscribe_item_bg"
			android:padding="5dp"
			android:textSize="@dimen/text_size_15"/>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingBottom="5dp"
		android:paddingLeft="20dp" android:paddingRight="20dp"
		android:paddingTop="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/people_num"
			android:textColor="@color/main_text_dark" android:textSize="@dimen/text_size_15"/>
		<EditText android:id="@+id/people_num_edit"
			android:layout_width="80dp" android:layout_height="wrap_content"
			android:layout_marginLeft="24dp" android:hint="请输入人数"
			android:background="@drawable/bg_search" android:textColor="@color/text_home_color"
			android:textColorHint="@color/main_text_dark" android:textSize="@dimen/text_size_13"/>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingBottom="5dp"
		android:paddingLeft="20dp" android:paddingRight="20dp"
		android:paddingTop="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/mtheme"
			android:textColor="@color/main_text_dark" android:textSize="@dimen/text_size_15"/>
		<LinearLayout android:id="@+id/mtheme_container"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="24dp" android:orientation="horizontal">
			<TextView 
			    android:id="@+id/methem1" 
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@drawable/subscribe_item_bg"
				android:gravity="center"
				android:text="@string/random_play"
				android:padding="5dp"
				android:textColor="@color/subscribe_item_text_color"
				android:layout_marginRight="5dp" android:textSize="14.0sp"/>
			<TextView android:id="@+id/methem2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:background="@drawable/subscribe_item_bg"
				android:gravity="center" android:padding="5dp" android:text="@string/train"
				android:textColor="@color/subscribe_item_text_color"
				android:layout_marginRight="5dp" android:textSize="14.0sp"/>
			<TextView android:id="@+id/methem3" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:background="@drawable/subscribe_item_bg"
				android:gravity="center" android:padding="5dp" android:text="@string/game"
				android:textColor="@color/subscribe_item_text_color"
				android:layout_marginRight="5dp" android:textSize="14.0sp"/>
			<TextView android:id="@+id/methem4" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:background="@drawable/subscribe_item_bg"
				android:gravity="center" android:padding="5dp" android:text="@string/teach_me"
				android:textColor="@color/subscribe_item_text_color"
				android:textSize="14.0sp"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingBottom="5dp"
		android:paddingLeft="20dp" android:paddingRight="20dp"
		android:paddingTop="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/charge"
			android:textColor="@color/main_text_dark" android:textSize="@dimen/text_size_15"/>
		<LinearLayout android:id="@+id/charge_container"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="24dp" android:orientation="horizontal">
			<TextView android:id="@+id/paytype1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@drawable/subscribe_item_bg"
				android:gravity="center"
				android:padding="5dp"
				 android:text="@string/aa"
				android:textColor="@color/subscribe_item_text_color"
				android:layout_marginRight="5dp" android:textSize="14.0sp"/>
			<TextView android:id="@+id/paytype2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:background="@drawable/subscribe_item_bg"
				android:gravity="center" 
				android:padding="5dp"
				android:text="@string/me_pay"
				android:textColor="@color/subscribe_item_text_color"
				android:layout_marginRight="5dp" android:textSize="14.0sp"/>
			<TextView android:id="@+id/paytype3" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:background="@drawable/subscribe_item_bg"
				android:gravity="center" 
				android:padding="5dp"
				android:text="@string/you_pay"
				android:textColor="@color/subscribe_item_text_color"
				android:textSize="14.0sp"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingBottom="5dp"
		android:paddingLeft="20dp" android:paddingRight="20dp"
		android:paddingTop="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/consume"
			android:textColor="@color/main_text_dark" android:textSize="@dimen/text_size_15"/>
		<EditText android:id="@+id/consume_edit"
			android:layout_width="90dp" android:layout_height="wrap_content"
			android:layout_marginLeft="24dp" android:hint="请输入单价"
			android:background="@drawable/bg_search" android:textColor="@color/text_home_color"
			android:textColorHint="@color/main_text_dark" android:textSize="@dimen/text_size_15"/>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/per_yuan_per_person"
			android:textColor="@color/text_home_color" android:textSize="@dimen/text_size_15"
			android:layout_marginLeft="8dp"/>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:gravity="top"
		android:paddingBottom="5dp" android:paddingLeft="20dp"
		android:paddingRight="20dp" android:paddingTop="5dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:gravity="top"
			android:text="@string/explain" android:textColor="@color/main_text_dark"
			android:textSize="@dimen/text_size_15"/>
		<EditText android:id="@+id/information_edit"
			android:layout_width="wrap_content" android:layout_height="120dp"
			android:layout_marginLeft="24dp" android:gravity="top"
			android:background="@drawable/bg_search" android:hint="@string/explain_hint"
			android:textColor="@color/text_home_color" android:textColorHint="@color/main_text_dark"
			android:textSize="@dimen/text_size_15"/>
	</LinearLayout>
</LinearLayout>