<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_view"
        android:layout_alignParentTop="true"
        layout="@layout/title_activity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_view"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="40dp"
            android:src="@drawable/ic_uu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/uu_exercise"
            android:textColor="@color/text_home_color"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >
            

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/exercise"
                android:textColor="@color/text_home_color"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/health"
                android:textColor="@color/text_home_color"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/happy"
                android:textColor="@color/text_home_color"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/copyright"
        android:textColor="@color/main_text_dark"
        android:textSize="@dimen/text_size_12" />

</RelativeLayout>