<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/title_activity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <EditText
            android:id="@+id/new_possword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/input_new_password_hint"
            android:inputType="text"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <EditText
            android:id="@+id/new_possword_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/password_to_hint"
            android:inputType="text"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:padding="5dp"
        android:text="@string/password_to_user_hint"
        android:textColor="#939393" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_book_press"
            android:padding="5dp"
            android:text="@string/ensure"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>