<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
	<include layout="@layout/title_activity" />
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/my_u_money_container"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_u"
                android:textColor="@color/text_home_color"
                android:textSize="@dimen/text_size_18" />
            <TextView
                android:id="@+id/my_u_money_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/main_text_dark"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>
         <View
            android:layout_width="1dp"
            android:layout_height="fill_parent" 
            android:background="@color/list_divider"/>

        <LinearLayout
            android:id="@+id/u_rule_container"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/u_rule"
                android:textColor="@color/text_home_color"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_u"
                android:textColor="@color/main_text_dark"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>
    </LinearLayout>
	<include layout="@layout/view_horizontal_line" />
	
    

</LinearLayout>
